[build-system]
requires = ["setuptools>=68.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kouriae"
version = "0.1.1"
description = "Ten-segment encoder/decoder"
readme = "README.md"
authors = [{ name = "tainn" }]
keywords = ["cli", "encoder", "decoder"]
dependencies = []
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.urls]
homepage = "https://github.com/tainn/kouriae"

[project.scripts]
kr = "kouriae:main"
kouriae = "kouriae:main"

[tool.ruff]
fix = true
indent-width = 4
line-length = 120
src = ["kouriae"]
select = [
    "I001",
    "F401"
]

[tool.ruff.lint.isort]
known-first-party = ["kouriae"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
exclude = ["build"]

[[tool.mypy.overrides]]
module = ["setuptools"]
ignore_missing_imports = true
